  already first. Reduces the cost of reordering
  (John Arbash Meinel, #562429)

* Less code is loaded at startup.  (Cold-cache start time is about 10-20%
  less.)
  (Martin Pool, #553017)

Documentation
*************

API Changes
***********

* ``bzrlib.diff.get_trees_and_branches_to_diff`` is deprecated.  Use
  ``get_trees_and_branches_to_diff_locked`` instead.
  (Andrew Bennetts)
  
Internals
*********

* ``bzrlib.commands.Command.run_direct`` is no longer needed - the pre
  2.1 method of calling run() to perform testing or direct use via the API
  is now possible again. As part of this, the _operation attribute on
  Command is now transient and only exists for the duration of ``run()``.
  (Robert Collins)

Testing
*******


bzr 2.2.0b1
###########

:2.2.0b1: Not released yet

Compatibility Breaks
********************

* BTreeGraphIndex can now take an offset to indicate that the data starts
  somewhere other than then beginning of the file. (John Arbash Meinel)

* Deleted very old hidden commands ``versionedfile-list``,
  ``weave-plan-merge``, ``weave-merge-text``.
  (Martin Pool)

* ``Repository.get_inventory_sha1()`` and ``Repository.get_revision_xml()`` 
  have been removed. (Jelmer Vernooij)

* ``Repository.get_revision_inventory()`` has been removed in favor of
  ``Repository.get_inventory()``. (Jelmer Vernooij)

* All test servers have been moved out of the bzrlib.transport hierarchy to
  bzrlib.tests.test_server *except* for MemoryServer, ChrootServer and
  PathFilteringServer. ``bzrlib`` users may encounter test failures that can
  be fixed by updating the related imports from ``bzrlib.transport.xxx`` to
  ``bzrlib.tests.test_server``.
  (Vincent Ladeuil)

* ``BranchReferenceFormat.initialize()`` now takes an optional name argument
  as its second parameter, for consistency with the initialize() method of
  other formats. (Jelmer Vernooij)

New Features
************

* Added ``bzr remove-branch`` command that can remove a local or remote 